# QTPropertyEditor

./: CMakeLists.txt  README.md
include/PropertyEditor/: CBoolProperty.h  CColorProperty.h  CDateProperty.h  CDateTimeProperty.h  CDoubleProperty.h  CFontProperty.h  CIntegerProperty.h  CListProperty.h  CPropertyHeader.h  CStringProperty.h  CTimeProperty.h
src/: CBaseProperty.cpp  CBoolProperty.cpp  CButtonBasedEditor.cpp  CColorProperty.cpp  CDateProperty.cpp  CDateTimeProperty.cpp  CDoubleProperty.cpp  CFontProperty.cpp  CIntegerProperty.cpp  CListProperty.cpp  CPropertyEditor.cpp  CPropertyHeader.cpp  CStringProperty.cpp  CTimeProperty.cpp  QColorComboBox.cpp
test/: CMakeLists.txt  testwidget.cpp  testwidget.h  testwidget.ui
